# ai-tokentrace

./: .env.dev  .gitignore  GEMINI.md  Procfile.dev  README.md  pyproject.toml
PRDs/: 00-ai-tokentrace.md
PRPs/: 00-implementation-plan-ai-tokentrace.md
PRPs/epics/: 00-01-scaffolding-and-foundation.md  00-02-core-service-implementation.md  00-03-google-genai-integration.md  00-04-adk-integration.md  00-05-ci-cd-and-documentation.md
examples/google-genai/: README.md
examples/google-genai/core/: async_generate.py  async_stream.py  sync_generate.py  sync_stream.py
examples/google-genai/images/: gemini_2_5_flash_image.py  imagen_4.py
examples/google-genai/models/: caching.py  gemini_2_5_flash_lite.py  gemini_2_5_flash_thinking.py  gemini_2_5_pro.py  google_search.py
examples/google-genai/services/: file_async.py  file_sync.py  firestore_async.py  firestore_sync.py  pubsub_async.py  pubsub_sync.py
examples/google-genai/video/: veo_3.py
scripts/: health_check.py
src/ai_tokentrace/: __init__.py  adk.py  async_utils.py  data_model.py  google_genai.py  services.py
tests/: test_adk.py  test_data_model.py  test_google_genai.py  test_integration.py  test_integration_extended.py  test_services.py
