# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "ai-tokentrace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Casey West", email = "casey@geeknest.com" }
]
requires-python = ">=3.9"
dependencies = [
    "google-genai>=1.46.0",
    "pydantic>=2.12.3",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
test = "pytest"
